build: use add-modules instead